--- a/22-DBSCAN/03-DBSCAN-Project-Solutions.ipynb
+++ b/22-DBSCAN/03-DBSCAN-Project-Solutions.ipynb
@@ -621,15 +621,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 128,
    "metadata": {},
    "outputs": [
@@ -1217,7 +1208,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1231,7 +1222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
